[gd_scene load_steps=37 format=3 uid="uid://dhjkg835ag544"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_m37vc"]
[ext_resource type="PackedScene" uid="uid://bol1s5y6fdpxt" path="res://data/main_character.gltf" id="2_kgggo"]
[ext_resource type="AudioStream" uid="uid://twbie136vrwc" path="res://data/male-fight-grunts-65425.mp3" id="3_tnutn"]
[ext_resource type="AudioStream" uid="uid://ghrdudm5i5vd" path="res://data/concrete-footsteps-6752.mp3" id="4_yoe4s"]
[ext_resource type="FontFile" uid="uid://lcffolxpq7uc" path="res://data/ASSETS/fonts/Meltingdizon-Regular.otf" id="5_3hwlg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_10cd7"]
albedo_color = Color(0.00392157, 0, 0.219608, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r2e15"]
albedo_color = Color(0.137255, 0.133333, 0.0823529, 1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fq27c"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uvjy3"]
animation = &"Combo Punch"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_isora"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t7v17"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6d53m"]
animation = &"Walking"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8eq5e"]
animation = &"run_forward"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_q63rq"]
blend_point_0/node = SubResource("AnimationNodeAnimation_t7v17")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_6d53m")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_8eq5e")
blend_point_2/pos = 2.0
min_space = 0.0
max_space = 2.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vmeo3"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2tlvv"]
animation = &"walking"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vqbr2"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_goph3"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2i63y"]
animation = &"jump"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_21gn6"]
auto_triangles = false
blend_point_0/node = SubResource("AnimationNodeAnimation_vmeo3")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_2tlvv")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_vqbr2")
blend_point_2/pos = Vector2(2, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_goph3")
blend_point_3/pos = Vector2(0, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_2i63y")
blend_point_4/pos = Vector2(1, 1)
triangles = PackedInt32Array(1, 3, 4, 1, 2, 4)
min_space = Vector2(0, 0)
max_space = Vector2(2, 1)
snap = Vector2(0.01, 1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uf7mx"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rc4cx"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_inh8s"]
animation = &"walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1q388"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c7nmr"]
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oho73"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h7ety"]
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m1gme"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jlrvm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ee4km"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wpf7u"]
resource_local_to_scene = true
states/Start/position = Vector2(286, 125)
states/idle/node = SubResource("AnimationNodeAnimation_uf7mx")
states/idle/position = Vector2(427, 64)
states/run/node = SubResource("AnimationNodeAnimation_rc4cx")
states/run/position = Vector2(559, 195)
states/walk/node = SubResource("AnimationNodeAnimation_inh8s")
states/walk/position = Vector2(691, 64)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_1q388"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_c7nmr"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_oho73"), "walk", "run", SubResource("AnimationNodeStateMachineTransition_h7ety"), "run", "walk", SubResource("AnimationNodeStateMachineTransition_m1gme"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_jlrvm"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_ee4km")]
graph_offset = Vector2(-48, 21)

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_0o3j2"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_wlhsw"]
xfade_time = 0.5
input_0/name = "moving"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "aim"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_k4vln"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_uvjy3")
nodes/Animation/position = Vector2(20, 20)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_fq27c")
"nodes/Animation 2/position" = Vector2(140, -100)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_isora")
nodes/Blend2/position = Vector2(320, -120)
nodes/BlendSpace1D/node = SubResource("AnimationNodeBlendSpace1D_q63rq")
nodes/BlendSpace1D/position = Vector2(140, -220)
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_21gn6")
nodes/BlendSpace2D/position = Vector2(-60, -180)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_wpf7u")
nodes/StateMachine/position = Vector2(-240, -140)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_0o3j2")
nodes/TimeScale/position = Vector2(300, 60)
nodes/Transition/node = SubResource("AnimationNodeTransition_wlhsw")
nodes/Transition/position = Vector2(520, -40)
nodes/output/position = Vector2(760, 40)
node_connections = [&"output", 0, &"Transition", &"Blend2", 0, &"BlendSpace1D", &"Blend2", 1, &"Animation 2", &"TimeScale", 0, &"Animation", &"Transition", 0, &"Blend2", &"Transition", 1, &"TimeScale"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_granb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hpum3"]
radius = 0.194568
height = 1.65402

[node name="Node3D" type="CharacterBody3D" groups=["players"]]
process_mode = 1
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
script = ExtResource("1_m37vc")

[node name="character" parent="." instance=ExtResource("2_kgggo")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.0286501, -0.218321)

[node name="Armature" parent="character" index="0"]
transform = Transform3D(0.01, 0, 0, 0, -4.37114e-10, -0.01, 0, 0.01, -4.37114e-10, 0, 0, 0)

[node name="aimcast" type="RayCast3D" parent="character/Armature" index="0"]
transform = Transform3D(1804.35, 1.83021, -7.31207e-07, 34.6453, -95.3189, 6.70139e-05, 5.18814e-06, -3.30692e-05, -193.202, -0.0168285, 0.00117302, -126.83)
collision_mask = 7

[node name="Skeleton3D" parent="character/Armature" index="1"]
bones/0/position = Vector3(-0.0886359, 0.793087, -89.8091)
bones/1/position = Vector3(0.144244, 0.605285, -0.268564)
bones/1/rotation = Quaternion(-0.0366649, -0.0460535, -0.0252126, 0.997948)
bones/2/rotation = Quaternion(-0.012999, 0.016707, 0.0250776, 0.999461)
bones/3/rotation = Quaternion(0.0113711, 0.00350551, 0.0149297, 0.999818)
bones/4/rotation = Quaternion(0.011013, 0.00365584, 0.0149429, 0.999821)
bones/5/rotation = Quaternion(0.101079, -0.00200698, 0.00267341, 0.994873)
bones/6/rotation = Quaternion(0.0536558, -0.00208913, 0.00319847, 0.998552)
bones/8/rotation = Quaternion(-0.686645, -0.315618, 0.521237, -0.396504)
bones/9/position = Vector3(-1.31141e-06, 14.4546, -1.12661e-07)
bones/9/rotation = Quaternion(0.494989, 0.118972, 0.0503532, 0.859241)
bones/10/position = Vector3(2.36528e-07, 27.3982, 4.3844e-07)
bones/10/rotation = Quaternion(-0.0409662, -0.00191125, 0.0781916, 0.996095)
bones/11/position = Vector3(4.63937e-07, 21.3396, 8.83955e-06)
bones/11/rotation = Quaternion(0.130799, -0.188836, 0.0115285, 0.973191)
bones/12/rotation = Quaternion(0.113098, 0.0356613, 0.25391, 0.959931)
bones/13/position = Vector3(-0.653017, 3.58848, -1.4584e-05)
bones/13/rotation = Quaternion(-0.047419, 0.0975202, -0.260219, 0.959441)
bones/14/position = Vector3(-0.0288026, 3.24592, 1.10046e-05)
bones/14/rotation = Quaternion(-0.17498, -0.0397141, 0.00143909, 0.98377)
bones/16/position = Vector3(-3.49534, 9.57221, 0.115072)
bones/16/rotation = Quaternion(0.0816864, 0.00626972, 0.079972, 0.993425)
bones/17/position = Vector3(0.0178205, 3.40276, 6.55519e-06)
bones/17/rotation = Quaternion(0.211273, 0.00166878, -0.018337, 0.977254)
bones/18/position = Vector3(-0.0111203, 3.13981, 4.97006e-07)
bones/18/rotation = Quaternion(0.0620907, 0.000104169, -0.00854587, 0.998034)
bones/20/position = Vector3(-1.09444, 10.0034, -0.174512)
bones/20/rotation = Quaternion(0.139201, -0.00418521, -0.0233725, 0.989979)
bones/21/position = Vector3(0.0188545, 3.4669, -1.28935e-05)
bones/21/rotation = Quaternion(0.246035, 0.00245726, -0.0182463, 0.969086)
bones/22/position = Vector3(-0.0147915, 3.31865, -7.05951e-06)
bones/22/rotation = Quaternion(0.129716, -0.000362694, -0.0194019, 0.991361)
bones/24/position = Vector3(1.15038, 10.1853, -0.231717)
bones/24/rotation = Quaternion(0.259586, -0.00690885, -0.0576551, 0.963973)
bones/25/position = Vector3(-0.00475307, 2.91416, 9.74323e-06)
bones/25/rotation = Quaternion(0.210574, 0.00151882, -0.0241617, 0.977278)
bones/26/position = Vector3(-0.0119356, 2.7514, -1.55166e-05)
bones/26/rotation = Quaternion(0.0225485, -0.00385894, -0.0204313, 0.99953)
bones/28/position = Vector3(3.43939, 9.13676, -0.000535997)
bones/28/rotation = Quaternion(0.289625, -0.00620582, -0.07464, 0.954205)
bones/29/rotation = Quaternion(0.228654, 0.00250579, -0.0195204, 0.973309)
bones/30/position = Vector3(-0.0144861, 2.3222, -2.04056e-05)
bones/30/rotation = Quaternion(-0.00438358, -0.00372183, -0.0183519, 0.999815)
bones/32/rotation = Quaternion(0.687027, -0.311719, 0.537976, 0.376042)
bones/33/position = Vector3(-2.08709e-06, 14.4546, -2.94387e-05)
bones/33/rotation = Quaternion(0.426152, -0.213831, -0.0637195, 0.876705)
bones/34/position = Vector3(3.0998e-06, 27.3956, -1.08814e-05)
bones/34/rotation = Quaternion(-0.0376496, -0.000380699, -0.114369, 0.992725)
bones/35/position = Vector3(2.39244e-07, 21.327, 1.28854e-05)
bones/35/rotation = Quaternion(0.128469, 0.0747792, -0.00551493, 0.988875)
bones/36/position = Vector3(2.9669, 3.06551, 1.33874)
bones/36/rotation = Quaternion(0.110657, -0.0312501, -0.282824, 0.952255)
bones/37/rotation = Quaternion(-0.0279336, -0.0956962, 0.296848, 0.949707)
bones/38/position = Vector3(-0.177274, 3.35971, -2.75984e-05)
bones/38/rotation = Quaternion(-0.177816, 0.0488613, 0.00699353, 0.982825)
bones/40/position = Vector3(3.6056, 9.87383, 0.13201)
bones/40/rotation = Quaternion(0.0773194, -0.00318304, -0.0445035, 0.996008)
bones/41/position = Vector3(-0.0174998, 3.27631, -2.73358e-06)
bones/41/rotation = Quaternion(0.213562, -0.00137412, 0.0148846, 0.976815)
bones/42/position = Vector3(0.00856136, 3.08422, -1.74041e-06)
bones/42/rotation = Quaternion(0.0753118, -0.000272766, 0.00692213, 0.997136)
bones/44/position = Vector3(1.00538, 10.2123, -0.307145)
bones/44/rotation = Quaternion(0.16356, 0.00356131, 0.0224795, 0.986271)
bones/45/position = Vector3(-0.0117083, 3.5343, 2.39623e-05)
bones/45/rotation = Quaternion(0.216656, -0.0016005, 0.0152005, 0.976128)
bones/46/position = Vector3(0.0124213, 3.21791, -1.78865e-05)
bones/46/rotation = Quaternion(0.121976, 0.000651879, 0.0160918, 0.992402)
bones/48/position = Vector3(-1.18565, 10.2108, -0.202291)
bones/48/rotation = Quaternion(0.254689, 0.0127596, 0.0733649, 0.964152)
bones/49/position = Vector3(0.00278522, 2.92895, 8.06446e-06)
bones/49/rotation = Quaternion(0.209191, -0.00118935, 0.0202023, 0.977665)
bones/50/position = Vector3(0.00919283, 2.74082, -1.62234e-05)
bones/50/rotation = Quaternion(0.0544038, 0.00253816, 0.0171516, 0.998369)
bones/52/rotation = Quaternion(0.275921, 0.0134841, 0.0887107, 0.956983)
bones/53/position = Vector3(-0.0111657, 2.78902, -1.38672e-05)
bones/53/rotation = Quaternion(0.245819, -0.00228562, 0.0158277, 0.969184)
bones/54/position = Vector3(0.0115883, 2.3556, 5.04615e-06)
bones/54/rotation = Quaternion(0.0866602, 0.000890453, 0.0150612, 0.996124)
bones/56/rotation = Quaternion(0.136008, 0.0594514, 0.981431, -0.12149)
bones/57/rotation = Quaternion(-0.116923, -0.011022, 0.0188425, 0.992901)
bones/58/rotation = Quaternion(0.490898, -0.11549, -0.00589947, 0.863508)
bones/59/rotation = Quaternion(0.332355, -0.0418522, 0.00947765, 0.942177)
bones/61/rotation = Quaternion(-0.088953, -0.0335943, 0.995295, 0.0186404)
bones/62/rotation = Quaternion(-0.0629568, 0.0862869, -0.00904551, 0.994238)
bones/63/rotation = Quaternion(0.535356, 0.102674, -0.0315268, 0.83777)
bones/64/rotation = Quaternion(0.344464, 0.0506047, -0.0105351, 0.937375)

[node name="Ch31_Pants" parent="character/Armature/Skeleton3D" index="4"]
material_override = SubResource("StandardMaterial3D_10cd7")

[node name="Ch31_Sweater" parent="character/Armature/Skeleton3D" index="6"]
material_override = SubResource("StandardMaterial3D_r2e15")

[node name="AnimationPlayer" parent="character" index="1"]
playback_default_blend_time = 3.0

[node name="die_timer" type="Timer" parent="character"]
wait_time = 2.0

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_k4vln")
anim_player = NodePath("../character/AnimationPlayer")
active = true
root_motion_track = NodePath("Armature/Skeleton3D:RootMotion")
parameters/Blend2/blend_amount = 0.0
parameters/BlendSpace1D/blend_position = 0.0017301
parameters/BlendSpace2D/blend_position = Vector2(0.568404, 0.366812)
parameters/StateMachine/playback = SubResource("AnimationNodeStateMachinePlayback_granb")
parameters/StateMachine/conditions/run = false
parameters/StateMachine/conditions/walk = false
parameters/TimeScale/scale = 1.0
parameters/Transition/current_state = "moving"
parameters/Transition/transition_request = ""
parameters/Transition/current_index = 0

[node name="jumpTimer" type="Timer" parent="AnimationTree"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.810592, -0.19671)
shape = SubResource("CapsuleShape3D_hpum3")

[node name="SpringArmPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.135522)

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.44135, 0)

[node name="Camera3D" type="Camera3D" parent="SpringArmPivot/SpringArm3D"]

[node name="punch_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_tnutn")
max_db = 3.021

[node name="Timer" type="Timer" parent="."]

[node name="running" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_yoe4s")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="go" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="go"]
offset_left = 74.0
offset_top = 43.0
offset_right = 1310.0
offset_bottom = 719.0
color = Color(0.321569, 0.321569, 0.321569, 1)

[node name="Label" type="Label" parent="go"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.0
offset_top = 234.0
offset_right = 106.0
offset_bottom = 309.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.47451, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_3hwlg")
theme_override_font_sizes/font_size = 66
text = "game over
"

[connection signal="timeout" from="character/die_timer" to="." method="_on_die_timer_timeout"]
[connection signal="timeout" from="AnimationTree/jumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="character"]
